<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/periodo_manha"
        android:icon="@drawable/ic_manha"
        android:title="@string/periodo_dia_manha"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/periodo_tarde"
        android:icon="@drawable/ic_tarde"
        android:title="@string/periodo_dia_tarde"
        app:showAsAction="ifRoom|withText"

        />
    <item
        android:id="@+id/periodo_noite"
        android:icon="@drawable/ic_noite"
        android:title="@string/periodo_dia_noite"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/periodo_madrugada"
        android:icon="@drawable/ic_madrugada"
        android:title="@string/periodo_dia_madrugada"
        app:showAsAction="ifRoom|withText"
        />
</menu>